fifo changes